# changelogs

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.extract  Dockerfile.gen-forge-updates  Dockerfile.render  entrypoint.sh  flake.nix  publish.sh  readme.md
extract/: Cargo.toml  action.yml
extract/src/: lib.rs  main.rs
gen-forge-updates/: Cargo.toml  action.yml
gen-forge-updates/src/: main.rs
render/: Cargo.toml  action.yml
render/src/: lib.rs  main.rs
src/: extract.rs  gen_forge_updates.rs  main.rs  render.rs
