[package]
name = 'changelogs'
version = '0.1.0'
edition = '2021'
publish = false

[dependencies]
anyhow = '1.0.68'
chrono = { version = '0.4.23', default-features = false, features = ['alloc'] }
lazy-regex = '2.4.1'
reqwest = { version = '0.11.13', default-features = false, features = [
    'json',
    'blocking',
    'rustls-tls',
] }
serde = { version = '1.0.152', features = ['derive'] }
serde_json = '1.0.91'
