[package]
name = 'changelogs'
version = '0.1.0'
edition = '2021'
publish = false

[dependencies]
anyhow = '1.0'
chrono = { version = '0.4', default-features = false, features = ['alloc'] }
clap = { version = '4.3', features = ['derive'] }
git2 = { version = '0.17', default-features = false }
lazy-regex = '2.5'
serde = { version = '1.0', features = ['derive'] }
serde_json = '1.0'

[dependencies.reqwest]
version = '0.11'
default-features = false
features = ['json', 'blocking', 'rustls-tls']

[profile.release]
# strip = true
lto = true
